fixed CSS bug on firefox

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -148,6 +148,7 @@ body{
 	
 	/* Firefox */
 	display:flex;
+	display: -moz-box;
 	-moz-box-pack:center;
 	-moz-box-align:center;
 	
